# document-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
document_parser/: __init__.py  config.py  detector.py  exceptions.py  extractor.py  handler.py  logger.py  models.py  parser.py
document_parser/tests/: __init__.py
