[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Document parsing library with OCR support for PDF, DOCX, and images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0,<11.0.0",
    "pydantic>=2.7.0,<2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]
