[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Document parsing library with OCR support for PDF, DOCX, and images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm==0.2.5",
    "python-docx==1.2.0",
    "pytesseract==0.3.13",
    "pillow==10.4.0",
    "pydantic==2.12.5",
    "xlrd==2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]
